--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,7 @@ body {
     height: 90vh;
 }
 
-.main {
-    justify-content: flex-start;
-}
-
-.main > .row > * {
+.container > .row > * {
     padding-right: 0 !important;
     padding-left: 0 !important;
 }
@@ -156,6 +152,24 @@ img.match {
     width: 90%;
 }
 
+.home-away-matches {
+    position: absolute;
+    top: calc(100% - 250px);
+    right: 0;
+    width: 100%;
+    height: 60px;
+    align-items: center;
+    justify-content: center;
+}
+
+.match {
+    opacity: 0;
+    position: absolute;
+    top: calc(100% - 80px);
+    right: 0;
+    width: 100%;
+}
+
 .match-band {
     position: absolute;
     top: calc(100% - 150px);
@@ -210,6 +224,10 @@ img.match {
 
 input :not(.form-check .form-control){
     padding: 1rem !important;
+}
+
+.errormsg {
+    color: red !important;
 }
 
 .row {
